--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,20 +13,20 @@
           <h1
             class="mb-6 text-3xl font-bold leading-snug text-white sm:text-4xl sm:leading-snug lg:text-5xl lg:leading-[1.2]"
           >
-            Free Astro Template and Starter for SaaS, Startup, and App Sites
+          172号卡分销系统官网
             </h1>
           <p
             class="mx-auto mb-9 max-w-[600px] font-medium text-base text-white sm:text-lg sm:leading-[1.44]"
           >
-A fantastic free and open-source Astro template, built for startups, SaaS companies, apps, businesses, and more. Comes with all essential pages, sections, components and fully-functional blog.
-          </p>
+          运营商官方合作伙伴，大流量+超低月租
+        </p>
           <ul class="mb-10 flex gap-5 flex-wrap items-center justify-center">
             <li>
               <a
-                href="https://github.com/TailGrids/play-astro/archive/refs/heads/main.zip"
+                href="https://····"
                 class="inline-flex items-center justify-center rounded-md bg-white py-[14px] px-7 text-center text-base font-medium text-dark shadow-1 transition duration-300 ease-in-out hover:text-body-color hover:bg-gray-2"
               >
-                Download Now
+                立即免费申请
               </a>
             </li>
             <li>
@@ -47,7 +47,7 @@ A fantastic free and open-source Astro template, built for startups, SaaS compan
                     </clipPath>
                   </defs>
                 </svg>
-                Star on Github
+                申请全国代理商
               </a>
             </li>
           </ul>
