72号卡分销系统官网 运营商官方合作伙伴，大流量+超低月租

--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -10,21 +10,17 @@
           <div class="mb-12 max-w-[540px] lg:mb-0">
             <h2
               class="mb-5 text-3xl font-bold leading-tight text-dark dark:text-white sm:text-[40px] sm:leading-[1.2]">
-              Brilliant Toolkit to Build Nextgen Website Faster.
+              为什么选择172号卡分销系统？
             </h2>
             <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
-              The main ‘thrust' is to focus on educating attendees on how to best protect highly vulnerable business
-              applications with
-              interactive panel discussions and roundtables led by subject matter experts.
+              172号卡分销系统提供全国三大运营商的优质流量卡，以更优惠的资费满足市场的需求。
               <br> <br>
-              The main ‘thrust' is to focus on educating attendees on how to best protect highly vulnerable business
-              applications with
-              interactive panel.
+              我们创建了简单且高效的全网分销商平台，通过您的店铺下单的每个号卡订单都将为您带来佣金收益。
             </p>
 
             <a href="javascript:void(0)"
               class="inline-flex items-center justify-center py-3 text-base font-medium text-center text-white border border-primary rounded-md px-7 bg-primary hover:bg-blue-dark hover:border-blue-dark">
-              Know More
+              注册一级
             </a>
           </div>
         </div>
