--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -2,35 +2,35 @@
 const features = [
   {
     icon: 'assets/features/icon-01.svg',
-    title: 'Free and Open-Source',
+    title: '全网最高的佣金',
     ref: 'javascript:void(0)',
-    refTitle: 'Learn More',
+    // refTitle: '立即申请',
     description:
-      'Lorem Ipsum is simply dummy text of the printing and industry.',
+      '全网最高佣金，注册即享一级代理分佣，赢在起跑线',
   },
   {
     icon: 'assets/features/icon-02.svg',
-    title: 'Multipurpose Template',
+    title: '佣金保障',
     ref: 'javascript:void(0)',
-    refTitle: 'Learn More',
+    // refTitle: '立即申请',
     description:
-      'Lorem Ipsum is simply dummy text of the printing and industry.',
+      '平台所有代理佣金由平台统一结算，申请提现后由平台统一打款，避免上游代理跑路问题',
   },
   {
     icon: 'assets/features/icon-03.svg',
-    title: 'High-quality Design',
+    title: '零库存压力',
     ref: 'javascript:void(0)',
-    refTitle: 'Learn More',
+    // refTitle: '立即申请',
     description:
-      'Lorem Ipsum is simply dummy text of the printing and industry.',
+      '所有流量卡品平台一键分销，没有压货库存烦恼，创业路上轻装上阵.',
   },
   {
     icon: 'assets/features/icon-04.svg',
-    title: 'All Essential Elements',
+    title: '金牌代理',
     ref: 'javascript:void(0)',
-    refTitle: 'Learn More',
+    // refTitle: '立即申请',
     description:
-      'Lorem Ipsum is simply dummy text of the printing and industry.',
+      '日均推广号卡5万单！运营商金牌合作伙伴！安全稳定！.',
   },
 ];
 ---
@@ -45,11 +45,10 @@ const features = [
             Features
           </span>
           <h2 class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]">
-            Main Features Of Play
+            172号卡分销系统官网
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available
-            but the majority have suffered alteration in some form.
+            运营商官方合作伙伴，大流量+超低月租
           </p>
         </div>
       </div>
