--- a/src/components/Pricingsection.astro
+++ b/src/components/Pricingsection.astro
@@ -2,22 +2,22 @@
 const priceboxes = [
   {
     popular:false,
-    packageName:"Starter",
-    price:'25.00',
-    subtitle:'Features',
-    btn:'Purchase Now',
+    packageName:"精选",
+    price:'0',
+    subtitle:'省内产品集合中心',
+    btn:'立即申请',
     purchaseLink:'/#',
     offerlist: [
-      {title: "Up to 1 User"},
-      {title: "All UI components"},
-      {title: "Lifetime access"},
-      {title: "Free updates"},
+      {title: "通用流量 105G"},
+      {title: "定向流量 30G"},
+      {title: "通话时长 100分钟"},
+      {title: "免费申请 包邮到家"},
     ],
   },
   {
     popular:true,
-    packageName:"Basic",
-    price:'59.00',
+    packageName:"移动",
+    price:'0',
     subtitle:'Features',
     btn:'Purchase Now',
     purchaseLink:'/#',
@@ -30,7 +30,7 @@ const priceboxes = [
   },
   {
     popular:false,
-    packageName:"Premium",
+    packageName:"电信",
     price:'99.00',
     subtitle:'Features',
     btn:'Purchase Now',
@@ -58,11 +58,11 @@ const priceboxes = [
             Pricing Table
           </span>
           <h2 class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:leading-[1.2] md:text-[40px]">
-            Awesome Pricing Plan
+             运营商官方正品
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available
-            but the majority have suffered alteration in some form.
+            运营商直签资源，全网最高佣金！
+            大流量+超低月租.
           </p>
         </div>
       </div>
@@ -91,10 +91,10 @@ const priceboxes = [
               {pricebox.packageName}
             </span>
             <h2 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:leading-[1.21] xl:text-[42px]">
-              <span class="text-xl font-medium">$</span>
+              <span class="text-xl font-medium">￥</span>
               <span class="ml-1 -tracking-[2px]">{pricebox.price}</span>
               <span class="text-base font-normal text-body-color dark:text-dark-6">
-                Per Month
+                免费申请
               </span>
             </h2>
   
