--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -1,9 +1,9 @@
 ---
 const teams = [
-  {name: "Matheus Ferrero", description: "Marketing Expert", image: "/assets/team/team-01.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Stuard Ferrel", description: "Digital Marketer", image: "/assets/team/team-02.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Eva Hudson", description: "Creative Designer", image: "/assets/team/team-03.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Jackie Sanders", description: "SEO Expert", image: "/assets/team/team-04.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "中国移动", description: "中国移动", image: "/assets/team/team-01.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "中国联通", description: "中国联通", image: "/assets/team/team-02.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "中国电信", description: "中国电信", image: "/assets/team/team-03.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "中国广电", description: "中国广电", image: "/assets/team/team-04.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
 ]
 ---
 
