--- a/src/components/Blogsection.astro
+++ b/src/components/Blogsection.astro
@@ -21,7 +21,7 @@ publishedBlogEntries.sort(function (a, b) {
             Our Blogs
           </span>
           <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]">
-            Our Recent News
+            最新资讯
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
             There are many variations of passages of Lorem Ipsum available
