--- a/src/components/CTAsection.astro
+++ b/src/components/CTAsection.astro
@@ -6,16 +6,15 @@
         <div class="w-full px-4">
           <div class="mx-auto max-w-[570px] text-center">
             <h2 class="mb-2.5 text-3xl font-bold md:leading-[1.44] text-white md:text-[38px]">
-              <span>What Are You Looking For?</span>
-              <span class="font-normal text-3xl md:text-[40px]"> Get Started Now </span>
+              <span>加入我们</span>
+              <span class="font-normal text-3xl md:text-[40px]"> 限时加入代理合伙人 </span>
             </h2>
             <p class="mb-6 mx-auto max-w-[515px] text-base leading-[1.5] text-white">
-              There are many variations of passages of Lorem Ipsum but the
-              majority have suffered in some form.
+              流量卡代理，不仅是一份事业，更是一次智慧的投资。与我们一起，驾驭数字时代的浪潮.
             </p>
             <a href="javascript:void(0)"
               class="inline-block py-3 text-base font-medium text-white transition border border-transparent rounded-md bg-secondary px-7 hover:bg-[#0BB489]">
-              Start using Play
+              立即免费申请
             </a>
           </div>
         </div>
