--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,31 +1,31 @@
 ---
 const menuitems = [
   {
-    title: "Home",
+    title: "首页",
     path: "/#home",
   },
   {
-    title: "About",
+    title: "关于",
     path: "/#about",
   },
   {
-    title: "Pricing",
+    title: "产品",
     path: "/#pricing",
   },
   {
-    title: "Team",
+    title: "团队",
     path: "/#team",
   },
   {
-    title: "Contact",
+    title: "联系我们",
     path: "/#contact",
   },
   {
-    title: "Blog",
+    title: "博客",
     path: "/blog",
   },
   {
-    title: "Pages",
+    title: "页面",
     path: "javascript:void(0)",
     children: [
       { title: "About Page", path: "/about" },
@@ -180,13 +180,13 @@ const menuitems = [
               href="/signin"
               class={`${Astro.url.pathname === '/' ? 'loginBtn py-2 px-[22px] text-base font-medium text-white hover:opacity-70' : 'loginBtn py-2 px-[22px] text-base font-medium text-dark dark:text-white hover:opacity-70'}`}
             >
-              Sign In
+             立即注册
             </a>
             <a
               href="/signup"
               class={`${Astro.url.pathname === '/' ? 'signUpBtn rounded-md bg-white bg-opacity-20 py-2 px-6 text-base font-medium text-white duration-300 ease-in-out hover:bg-opacity-100 hover:text-dark' : 'signUpBtn rounded-md bg-primary py-2 px-6 text-base font-medium text-white duration-300 ease-in-out hover:bg-blue-dark'}`}
             >
-              Sign Up
+              管理后台
             </a>
           </div>
         </div>
