72号卡分销系统官网 运营商官方合作伙伴，大流量+超低月租

--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -1,28 +1,28 @@
 ---
 const faqs = [
   {
-    title: "Is TailGrids Well-documented?",
-    description: "It takes 2-3 weeks to get your first blog post ready. That includes the in-depth research & creation of your monthly content ui/ux strategy that we do writing your first blog post.",
+    title: "资 金 安 全 守 护",
+    description: "鉴于对代理商以及次级分销代理的顾虑，172号卡分销系统区别于其他流量卡分销平台，不直接交由代理用户下发佣金，而是依据每张流量卡不同的返佣规则自动打款到用户手中，这使得172号卡分销系统在一众平台中获得好评.",
   },
   {
-    title: "Is TailGrids Well-documented?",
-    description: "It takes 2-3 weeks to get your first blog post ready. That includes the in-depth research & creation of your monthly content ui/ux strategy that we do writing your first blog post.",
+    title: "上百种卡品挑选",
+    description: "对于不同的业务场景和推销人群，172号卡分销系统与四大运营商合作推出了多种不同的流量卡卡品，代理商可根据自己的推广需求灵活的挑选产品",
   },
   {
-    title: "Is TailGrids Well-documented?",
-    description: "It takes 2-3 weeks to get your first blog post ready. That includes the in-depth research & creation of your monthly content ui/ux strategy that we do writing your first blog post.",
+    title: "高额佣金等你来拿",
+    description: "对于前期创业来说，选择一个高佣金的流量卡平台是很重要的，172号卡分销系统在佣金方面提供了高额的佣金和等级制度以此激励代理用户的发展",
   },
   {
-    title: "Is TailGrids Well-documented?",
-    description: "It takes 2-3 weeks to get your first blog post ready. That includes the in-depth research & creation of your monthly content ui/ux strategy that we do writing your first blog post.",
+    title: "零成本加盟",
+    description: "代理商无需支付任何代理费用即可开启流量卡推广业务，实现零成本创业，轻创业，享未来",
   },
   {
-    title: "Is TailGrids Well-documented?",
-    description: "It takes 2-3 weeks to get your first blog post ready. That includes the in-depth research & creation of your monthly content ui/ux strategy that we do writing your first blog post.",
+    title: "独立后台操作",
+    description: "通过独立后台，代理商可以清晰直观管理订单和一键式操作，大大提高了工作效率",
   },
   {
-    title: "Is TailGrids Well-documented?",
-    description: "It takes 2-3 weeks to get your first blog post ready. That includes the in-depth research & creation of your monthly content ui/ux strategy that we do writing your first blog post.",
+    title: "零售后服务",
+    description: "客户完成首冲后，可以直接享受运营商官方的客服支持，代理商无需承担售后服务压力",
   },
 ]
 ---
@@ -39,11 +39,10 @@ const faqs = [
             FAQ
           </span>
           <h2 class="text-dark dark:text-white mb-3 text-3xl leading-[1.2] font-bold sm:text-4xl md:text-[40px]">
-            Any Questions? Look Here
+             172号卡分销系统的优势
           </h2>
           <p class="mx-auto max-w-[485px] text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available
-            but the majority have suffered alteration in some form.
+            作为流量卡分销行业中的龙头企业，172号卡分销系统具备足够的优势提供给代理商.
           </p>
         </div>
       </div>
