--- a/src/components/Pricingsection.astro
+++ b/src/components/Pricingsection.astro
@@ -18,34 +18,34 @@ const priceboxes = [
     popular:true,
     packageName:"移动",
     price:'0',
-    subtitle:'Features',
+    subtitle:'移动沧蕾卡',
     btn:'Purchase Now',
     purchaseLink:'/#',
     offerlist: [
-      {title: "Up to 1 User"},
-      {title: "All UI components"},
-      {title: "Lifetime access"},
-      {title: "Free updates"},
+      {title: "通用流量 50G"},
+      {title: "定向流量 30G"},
+      {title: "通话时长 0分钟"},
+      {title: "免费包邮到家"},
     ],
   },
   {
     popular:false,
     packageName:"电信",
-    price:'99.00',
-    subtitle:'Features',
+    price:'0',
+    subtitle:'电信梦神卡',
     btn:'Purchase Now',
     purchaseLink:'/#',
     offerlist: [
-      {title: "Up to 1 User"},
-      {title: "All UI components"},
-      {title: "Lifetime access"},
-      {title: "Free updates"},
+      {title: "通用流量   0分钟"},
+      {title: "A50G定向流量"},
+      {title: "30G通话时长"},
+      {title: "免费申请 包邮到家"},
     ],
   },
 ]
 ---
 
-<!-- ====== Pricing Section Start -->
+<!-- ====== 定价部分开始- -->
 <section
   id="pricing"
   class="relative z-20 overflow-hidden bg-white dark:bg-dark pt-20 pb-12 lg:pt-[120px] lg:pb-[90px]"
