--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -20,8 +20,7 @@ const teams = [
             Our Creative Team
           </h2>
           <p class="text-body-color dark:text-dark-6 text-base">
-            There are many variations of passages of Lorem Ipsum available
-            but the majority have suffered alteration in some form.
+            全网流量卡资源整合平台，轻创业，享未来
           </p>
         </div>
       </div>
