--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -57,8 +57,7 @@ const testimonials = [
             What our Clients Say
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available
-            but the majority have suffered alteration in some form.
+            全网流量卡资源整合平台，轻创业，享未来
           </p>
         </div>
       </div>
