--- a/src/components/Blogsection.astro
+++ b/src/components/Blogsection.astro
@@ -24,8 +24,7 @@ publishedBlogEntries.sort(function (a, b) {
             最新资讯
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available
-            but the majority have suffered alteration in some form.
+            全网流量卡资源整合平台，轻创业，享未来.
           </p>
         </div>
       </div>
