--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -35,7 +35,7 @@
                 target="_blank"
                 class="flex items-center gap-4 py-[14px] rounded-md bg-white/[0.12] px-6 text-base font-medium text-white transition duration-300 ease-in-out hover:bg-white hover:text-dark"
               >
-                <svg class="fill-current" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                <!-- <svg class="fill-current" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_2005_10818)">
                     <path
@@ -46,7 +46,7 @@
                       <rect width="24" height="24" fill="white" />
                     </clipPath>
                   </defs>
-                </svg>
+                </svg> -->
                 申请全国代理商
               </a>
             </li>
