--- a/src/components/layout/Breadcrumb.astro
+++ b/src/components/layout/Breadcrumb.astro
@@ -12,7 +12,7 @@
             <slot name="title">Title</slot>
           </h1>
           <p class="mb-5 text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available.
+            全网流量卡资源整合平台，轻创业，享未来
           </p>
 
           <ul class="flex items-center justify-center gap-[10px]">
