72号卡分销系统官网 运营商官方合作伙伴，大流量+超低月租

--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -36,13 +36,15 @@ const faqs = [
       <div class="w-full px-4">
         <div class="mx-auto mb-[60px] max-w-[520px] text-center">
           <span class="block mb-2 text-lg font-semibold text-primary">
-            FAQ
+            FAQ<br/><br/>
           </span>
           <h2 class="text-dark dark:text-white mb-3 text-3xl leading-[1.2] font-bold sm:text-4xl md:text-[40px]">
-             172号卡分销系统的优势
+             172号卡分销系统的优势<br/><br/>
           </h2>
           <p class="mx-auto max-w-[485px] text-base text-body-color dark:text-dark-6">
-            作为流量卡分销行业中的龙头企业，172号卡分销系统具备足够的优势提供给代理商.
+            
+            作为流量卡分销行业中的龙头企业<br/><br/>
+            172号卡分销系统具备足够的优势提供给代理商.
           </p>
         </div>
       </div>
