--- a/src/components/Pricingsection.astro
+++ b/src/components/Pricingsection.astro
@@ -19,7 +19,7 @@ const priceboxes = [
     packageName:"移动",
     price:'0',
     subtitle:'移动沧蕾卡',
-    btn:'Purchase Now',
+    btn:'立即申请',
     purchaseLink:'/#',
     offerlist: [
       {title: "通用流量 50G"},
@@ -33,7 +33,7 @@ const priceboxes = [
     packageName:"电信",
     price:'0',
     subtitle:'电信梦神卡',
-    btn:'Purchase Now',
+    btn:'立即申请',
     purchaseLink:'/#',
     offerlist: [
       {title: "通用流量   0分钟"},
