--- a/src/components/layout/MadeWithButton.astro
+++ b/src/components/layout/MadeWithButton.astro
@@ -1,13 +1,19 @@
 <!-- ====== Made With Button Start -->
+<!-- 链接到 Tailgrids 网站的按钮，用于展示该页面是使用 Tailgrids 构建的 -->
 <a target="_blank" rel="nofollow noopener"
   class="inline-flex items-center gap-[10px] py-2 px-[14px] rounded-lg bg-white dark:bg-dark-2 shadow-2 fixed bottom-8 left-4 sm:left-9 z-[999]"
   href="https://tailgrids.com/">
+  <!-- 按钮中的文本，指示该页面是使用 Tailgrids 构建的 -->
   <span class="text-base font-medium text-dark-3 dark:text-dark-6">
-    Made with
+    立即申請
   </span>
+  <!-- 按钮中的分隔线，用于分隔文本和图标 -->
   <span class="w-px h-4 block bg-stroke dark:bg-dark-3"></span>
+  <!-- 按钮中的图标，显示 Tailgrids 的标志 -->
   <span class="block max-w-[88px] w-full">
+    <!-- 浅色主题下的 Tailgrids 图标 -->
     <img src="/assets/brands/tailgrids.svg" alt="tailgrids" class="dark:hidden">
+    <!-- 深色主题下的 Tailgrids 图标 -->
     <img src="/assets/brands/tailgrids-white.svg" alt="tailgrids" class="hidden dark:block">
   </span>
 </a>
