--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -76,7 +76,7 @@ const footerLinks = [
         isExternal: true,
       },
       {
-        name: 'TailGrids',
+        name: '聯係我們',
         href: 'https://tailgrids.com/',
         isExternal: true,
       },
@@ -288,7 +288,7 @@ const footerLinks = [
                 target="_blank"
                 class="text-gray-1 hover:underline"
               >
-                TailGrids
+                聯係我們
               </a>
             </p>
           </div>
